[metadata]
name = automationcc
version = attr: automationcc.__version__
author = Samia Boussaid
classifiers =
        Programming Language :: Python :: 3.12
[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.12
packages = find:
test_suite = tests
setup_requires =
    pytest-runner >= 3.9.2

install_requires =
    tkinterdnd2 >= 0.3.0
    tqdm >= 4.65.0
    ttkwidgets >= 0.13.0
    auto-py-to-exe >= 2.33.0
    pyperclip >= 1.8.2
    pandas >= 2.1.4
    openpyxl >= 3.1.2
    pyarrow >= 15.0.0
    pyinstaller >= 6.0.0
    pylint >= 2.17.4
    pytest >= 3.9.2
    tabulate >= 0.9.0
    python_calamine == 0.2.0

[options.entry_points]
console_scripts = 
    cc_auto = automationcc:run
gui_scripts =  
    gui_cc_auto = automationcc:run
